tests/vectors/valid/array_empty.hex
6E 72 66 31  06  00
