tests/vectors/invalid/truncated_int.hex
6E 72 66 31  03  00 00 00 00
